--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
 
       <section class="page-header">
-        <h1 class="project-name">Q and A Site</h1>
-        <h2 class="project-tagline">Welcome New Students</h2>
+        <h1 class="project-name">Classes To Take</h1>
+        <h2 class="project-tagline">Classes and Programs</h2>
       </section>
 
       <section class="main-content">
